--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -1,2 +1,28 @@
 <h1>Create a new Pet</h1>
 
+<form action="/pets" method="POST">
+  <label>Name:</label>
+ 
+  <br></br>
+ 
+  <input type="text" name="pet[name]" id="pet_name">
+ 
+  <br></br>
+ 
+  <label>Choose an existing owner:</label>
+ 
+  <br></br>
+ 
+  <%Pet.all.each do |pet|%>
+    <input type="checkbox" name="owner[pet_ids][]" id="<%=pet.id%>" value="<%=pet.id%>"><%=pet.name%></input>
+  <%end%>
+ 
+  <br></br>
+ 
+    <label>and/or, create a new pet:</label>
+    <br></br>
+    <label>name:</label>
+      <input  type="text" name="pet[name]"></input>
+    <br></br>
+  <input type="submit" value="Create Owner">
+</form>
