--- a/app/views/pets/new.erb
+++ b/app/views/pets/new.erb
@@ -13,16 +13,16 @@
  
   <br></br>
  
-  <%Pet.all.each do |pet|%>
-    <input type="checkbox" name="owner[pet_ids][]" id="<%=pet.id%>" value="<%=pet.id%>"><%=pet.name%></input>
+  <%Owner.all.each do |owner|%>
+    <input type="checkbox" name="pet[owner_id]" id="<%=owner.name%>" value="<%=owner.id%>"><%=owner.name%></input>
   <%end%>
  
   <br></br>
  
-    <label>and/or, create a new pet:</label>
+    <label>and/or, create a new owner:</label>
     <br></br>
     <label>name:</label>
-      <input  type="text" name="pet[name]"></input>
+      <input  type="text" name="owner[name]" id="owner_name"></input>
     <br></br>
   <input type="submit" value="Create Owner">
 </form>
