automatically backed up by learn

--- a/app/views/pets/edit.erb
+++ b/app/views/pets/edit.erb
@@ -19,10 +19,10 @@
  
   <br></br>
  
-  <label>and/or, create a new pet:</label>
+  <label>and/or, create a new owner:</label>
   <br></br>
   <label>name:</label>
-    <input  type="text" name="pet[name]" id="pet_name"></input>
+    <input  type="text" name="owner[name]" id="owner_name"></input>
   <br></br>
-  <input type="submit" value="Update Owner">
+  <input type="submit" value="Update Pet">
 </form>
